--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "preinstall": "npm install -g @angular/cli @angular/compiler-cli @angular-devkit/build-angular typescript",
+    "preinstall": "npm install -g express @angular/cli @angular/compiler-cli @angular-devkit/build-angular typescript",
     "postinstall": "ng build --prod"
   },
   "private": true,
