--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "preinstall": "npm install -g express @angular/cli @angular/compiler-cli @angular-devkit/build-angular typescript",
+    "preinstall": "npm install -g @angular/cli @angular/compiler-cli @angular-devkit/build-angular typescript",
     "postinstall": "ng build --prod"
   },
   "main": "server.js",
@@ -25,6 +25,7 @@
     "@angular/router": "^7.0.2",
     "@thisissoon/angular-ellipsis": "^1.3.2",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "ng-click-outside": "^4.0.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
