revert server file

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "main": "server.js",
   "private": true,
+  "engines": {
+    "node": "8.11.1",
+    "npm": "6.4.1"
+  },
   "dependencies": {
     "@angular/animations": "^7.0.2",
     "@angular/common": "^7.0.2",
